# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLM.cmake
include/: aabb.h  camera.h  image.h  intersections.h  lighting.h  octree.h  ray.h  scene.h
src/: main.cpp  scene.cpp
